--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,15 @@
-<div style="text-align: center;">
-  <h1>Welcome to {{ title }} </h1>
-  <nav>
-    <a routerLink="create" routerLinkActive="active">Add coins</a>
-  </nav>
+<nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <ul class="nav navbar-nav">
+      <li>
+        <a routerLink="create">Add Share</a>
+      </li>
+      <li>
+        <a routerLink="index">Display Shares</a>
+      </li>
+    </ul>
+  </div>
+</nav>
+<div class="container">
   <router-outlet></router-outlet>
 </div>
