--- a/src/app/components/create/create.component.html
+++ b/src/app/components/create/create.component.html
@@ -1,1 +1,17 @@
-<p>create works!</p>
+<div class="panel panel-primary">
+  <div class="panel-body">
+    <form>
+      <div class="form-group">
+        <label for="" class="col-md-4">Share Name</label>
+        <input type="text" class="form-control" name="name">
+      </div>
+      <div class="form-group">
+        <label for="" class="col-md-4">Share Price</label>
+        <input type="text" class="form-control" name="coin_price">
+      </div>
+      <div class="form-group">
+        <button type="submit" class="btn btn-primary">Add</button>
+      </div>
+    </form>
+  </div>
+</div>
