--- a/src/app/components/create/create.component.html
+++ b/src/app/components/create/create.component.html
@@ -1,16 +1,28 @@
 <div class="panel panel-primary">
   <div class="panel-body">
-    <form>
+    <form [formGroup]="angForm" novalidate>
       <div class="form-group">
         <label for="" class="col-md-4">Share Name</label>
-        <input type="text" class="form-control" name="name">
+        <input type="text" class="form-control" name="name" formControlName="name">
       </div>
+      <div **ngIf="angForm.controls['name'].invalid && (angForm.controls['name'].dirty ||
+      angForm.controls['name'].touched)" class="alert alert-danger">
+        <div *ngIf="angForm.controls['name'].errors.required">
+          Name is required.
+        </div>
+    </div>
       <div class="form-group">
         <label for="" class="col-md-4">Share Price</label>
-        <input type="text" class="form-control" name="coin_price">
+        <input type="text" class="form-control" name="coin_price" formControlName="price">
+      </div>
+      <div *ngIf="angForm.controls['price'].invalid && (angForm.controls['price'].dirty ||
+        angForm.controls['price'].touched)" class="alert alert-danger">
+        <div *ngIf="angForm.controls['price'].errors.required">
+          Price is required.
+        </div>
       </div>
       <div class="form-group">
-        <button type="submit" class="btn btn-primary">Add</button>
+        <button (click)="addShare(name.value, price.value)" [disabled]="angForm.pristine || angForm.invalid" type="submit" class="btn btn-primary">Add</button>
       </div>
     </form>
   </div>
