--- a/src/app/components/create/create.component.html
+++ b/src/app/components/create/create.component.html
@@ -22,7 +22,7 @@
         </div>
       </div>
       <div class="form-group">
-        <button (click)="addShare(name.value, price.value)" [disabled]="angForm.pristine || angForm.invalid" type="submit" class="btn btn-primary">Add</button>
+        <button (click)="addShare('simon', 345)" [disabled]="angForm.pristine || angForm.invalid" class="btn btn-primary">Add</button>
       </div>
     </form>
   </div>
